fix(GUI): Fixed broken youtube playlist downloader